--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     ggplot2
+URL: https://github.com/hareshsuppiah/thisbetterwork
+BugReports: https://github.com/hareshsuppiah/thisbetterwork/issues
